处理相册问题